--- a/vignettes/updateMaddisonData.Rmd
+++ b/vignettes/updateMaddisonData.Rmd
@@ -15,12 +15,12 @@ knitr::opts_chunk$set(
 ```
 
 ```{r setup}
-library(SS4Maddison)
+library(MaddisonData)
 ```
 
 ## Intro 
 
-This vignette describes how to download the latest Maddison Project data and create from it three data sets included in the package `SS4Maddison`: `MaddisonData`, `MaddisonCountries`, and `MaddisonRefs`. 
+This vignette describes how to download the latest Maddison Project data and create from it four data sets included in the package `MaddisonData`: `MaddisonCountries`, `MaddisonData`, `MaddisonSources`, and `MaddisonYears`. 
 
 The Wikipedia article on the [Maddison Project](https://en.wikipedia.org/wiki/Maddison_Project) says, "Development economist Branko Milanović (writing for the World Bank), development economist Morten Jerven, and billionaire philanthropist Bill Gates have identified the Maddison Project, the Penn World Tables, and World Bank/IMF data (the World Development Indicators), as the three main sources of worldwide economic statistics such as GDP data, with the focus of the Maddison Project being on historical data. Economist Paul Krugman has suggested the Maddison Project as a data source for historical debt, growth, and labor output and productivity data."  
 
@@ -30,36 +30,36 @@ Bolt and van Zanden (2020) say that, "The Maddison database on Historical Statis
 
 The web site for [Maddison project data](https://www.rug.nl/ggdc/historicaldevelopment/maddison/) offers both "Angus Maddison's unaltered final dataset" and the "Latest Maddison Project Release".
 
-On 2025-08-28 I saw that the "Latest Maddison Project Release" was dated 2024-09-18. I requested that and found that it was available in either Excel or Stata format. I downloaded the Excel format to my current working directory as `mpd2023web.xlsx`. (On 2025-08-28 I found a 4 MB file by this name dated 2025-06-03. I changed that name to `mpd023web0.xlsx` and downloaded ostensibly the same file and got one with 4.9 MB. I doubt if I would have deleted some of the content of the file with date 2025-06-03, though that's possible. In any event, I plan to ignore this difference.) 
+On 2025-08-28 I saw that the "Latest Maddison Project Release" was dated 2024-09-18. I requested that and found that it was available in either Excel or Stata format. I downloaded the Excel format to my current working directory as `mpd2023web.xlsx`. (On 2025-08-28 I found a 4 MB file by this name dated 2025-06-03. I changed that name to `mpd023web0.xlsx` and downloaded ostensibly the same file and got one with 4.9 MB. I doubt if I would have deleted some of the content of the file with date 2025-06-03, though that's possible. In any event, I plan to ignore this difference for the moment.) 
 
 In 2024, I also downloaded ["Maddison Database 2010"](https://www.rug.nl/ggdc/historicaldevelopment/maddison/releases/maddison-database-2010) and compared it with `mpd2020.xlsx`. I compared the two for numbers for the former USSR, the UK, and the US. I found that the newer data had many numbers the older data didn't while the older data had a few numbers absent from the newer data. However, it seemed that I would be wise to ignore the older data. 
 
 ## Find the data file
 
 ```{r findData}
-(SS4xlsx <- path_package2('^mpd2023.*xlsx$'))
-foundData <- (length(SS4xlsx)>0)
+(MadXlsx <- path_package2('^mpd2023.*xlsx$'))
+(foundData <- (length(MadXlsx)>0))
 ```
 
 If more than one file was found, pick the most recent one. 
 
-```{r whichSS4xlsx, eval=foundData}
-MadInfo <- file.info(SS4xlsx)
+```{r whichMadxlsx, eval=foundData}
+MadInfo <- file.info(MadXlsx)
 cat('Multiple files found.\n')
 print(MadInfo)
 imax <- which.max(MadInfo$mtime)
-SS4xlsx <- SS4xlsx[imax]
+Madxlsx <- MadXlsx[imax]
 ```
 
 ## Read the data file
 
-Now read `SS4xlsx`. 
+Now read `Madxlsx`. 
 
 ```{r readMaddison, eval=foundData}
-MaddisonData0 <- readxl::read_xlsx(SS4xlsx, sheet='Full data')
+MaddisonData0 <- readxl::read_xlsx(Madxlsx, sheet='Full data')
 head(MaddisonData0, 2)
 tail(MaddisonData0)
-MaddisonSources0 <- readxl::read_xlsx(SS4xlsx, 
+MaddisonSources0 <- readxl::read_xlsx(Madxlsx, 
                         sheet='Sources')
 names(MaddisonSources0) <- c('ISO', 'years', 'source')
 head(MaddisonSources0)
@@ -118,7 +118,7 @@ if(FALSE){
 getwd()
 ```
 
-This saves `MaddisonCountries` in `MaddisonCountries.rda` in the working directory. To include that in the package, copy or move that file into the `data` subdirectory of the package. 
+This saves `MaddisonCountries` in `MaddisonCountries.rdb` in the working directory. To include that in the package, copy or move that file into the `data` subdirectory of the package and change the suffix to `rda`.  
 
 We can use [subset](https://www.rdocumentation.org/packages/base/versions/3.6.2/topics/subset) got translate between `country` and `countrycode` or select all countries in selected regions. 
 
@@ -138,7 +138,7 @@ First identify all rows of `MaddisonData` with both `gdppc` and `pop` `NA`.
 ## MaddisonData
 
 ```{r MaddisonData, eval=foundData}
-NAs <- with(MaddisonData0, is.na(gdppc*pop))
+NAs <- with(MaddisonData0, is.na(gdppc) & is.na(pop))
 str(MaddisonData <- MaddisonData0[!NAs, c(1, 4:6)])
 names(MaddisonData)[1] <- 'ISO' 
 
