--- a/vignettes/SS4Maddison.Rmd
+++ b/vignettes/SS4Maddison.Rmd
@@ -21,7 +21,28 @@ This vignette describes how to fit a state-space model to `MaddisonData` using `
 
 ```{r getData}
 library(MaddisonData)
-str(GBR <- MaddisonData[MaddisonData$ISO=='GBR', ])
-str(USA <- MaddisonData[MaddisonData$ISO=='USA', ])
+str(GBR <- logMaddison('GBR'))
+str(USA <- logMaddison('USA'))
 ```
 
+plot
+
+```{r plotMad}
+ylim <- range(GBR$gdppc, USA$gdppc, na.rm=TRUE)
+xlim <- c(1000, max(GBR$year))
+op <- par(mar=c(3,3,0,0))
+plot(range(GBR$year), ylim/1000, log='y', ylab='',
+     xlab='', type='n', las=1, xlim=xlim)
+
+with(GBR, lines(gdppc/1000~year, col='red',
+                lty='dotted'))
+with(USA, lines(gdppc/1000~year, col='blue',
+                lty='dashed'))
+par(op)
+```
+
+Looks good. 
+
+## Kalman filtering and smoothing. 
+
+We will use the [KFAS (Kalman filtering and smoothing)](https://github.com/helske/KFAS) package. 
