--- a/vignettes/IndustrialRevolution.Rmd
+++ b/vignettes/IndustrialRevolution.Rmd
@@ -19,7 +19,7 @@ Acemoglu and Robinson (2012) say that the Industrial Revolution began in England
 
 ## Introduction  
 
-The [`MaddisonData`](https://github.com/sbgraves237/MaddisonData) package for R includes a [`plotMaddison`](https://github.com/sbgraves237/MaddisonData/blob/main/man/plotMaddison.Rd) function that makes it easy to plot [Maddison project data](https://www.rug.nl/ggdc/historicaldevelopment/maddison/?lang=en) for any country or group of countries plus a  [`getMaddisonSources`](https://github.com/sbgraves237/MaddisonData/blob/main/man/getMaddisonSources.Rd) function that makes it easy to get the citations required for publication of such a plot. We illustrate that here applied to England / Great Britain / the United Kingdom, whose 3-letter ISO code is `GBR`. We select that, because it suggests that the [Industrial Revolution](https://en.wikipedia.org/wiki/Industrial_Revolution) began in England close to 1649, when the English chopped the head off their [King Charles I](https://en.wikipedia.org/wiki/Charles_I_of_England) for abuse of power, 40 years earlier than the English Bill of Rights, which Acemoglu and Robinson (2012) claim started the Industrial Revolution 
+The [`MaddisonData`](https://github.com/sbgraves237/MaddisonData) package for R includes a [`ggplotPath`](https://github.com/sbgraves237/MaddisonData/blob/main/man/ggplotPath.Rd) function that makes it easy to plot [Maddison project data](https://www.rug.nl/ggdc/historicaldevelopment/maddison/?lang=en) for any country or group of countries plus a  [`getMaddisonSources`](https://github.com/sbgraves237/MaddisonData/blob/main/man/getMaddisonSources.Rd) function that makes it easy to get the citations required for publication of such a plot. We illustrate that here applied to England / Great Britain / the United Kingdom, whose 3-letter ISO code is `GBR`. We select that, because it suggests that the [Industrial Revolution](https://en.wikipedia.org/wiki/Industrial_Revolution) began in England close to 1649, when the English chopped the head off their [King Charles I](https://en.wikipedia.org/wiki/Charles_I_of_England) for abuse of power, 40 years earlier than the English Bill of Rights, which Acemoglu and Robinson (2012) claim started the Industrial Revolution 
 
 ## World leader in GDPpc by year
 
@@ -36,7 +36,7 @@ MaddisonData::MaddisonCountries[names(Leaders00), 1:2]
 Let's redo this without countries like `ARE`, `KWT`, and `QAT` that seem NOT to have been technology leaders. 
 
 ```{r leaders1}
-Leaders1 <- MaddisonLeaders(c('ARE', 'KWT', 'QAT'))
+Leaders1 <- MaddisonData::MaddisonLeaders(c('ARE', 'KWT', 'QAT'))
 Leaders10 <- table(Leaders1$ISO)
 MaddisonData::MaddisonCountries[names(Leaders10), 1:2]
 ```
@@ -48,7 +48,12 @@ Let's plot.
 ```{r plotMad}
 library(MaddisonData)
 
-plotLeaders1 <- MaddisonData::plotMaddison(names(Leaders10))
+Leaders10d <- subset(MaddisonData, ISO %in% names(Leaders10))
+plotLeaders1 <- MaddisonData::ggplotPath(y='gdppc', group='ISO', 
+                        data=Leaders10d, scaley=1000)
+
+plotLeaders1
+plotLeaders1 + ggplot2::xlim(1200, 2022)
 ```
 
 `MaddisonSources` for all 15 leaders? 
@@ -61,7 +66,7 @@ head(MadSources15)
 How long was each country the leader? 
 
 ```{r plotDur}
-  plot(yearEnd-yearBegin+1~yearBegin, Leaders1, log='y', las=1)
+plot(yearEnd-yearBegin+1~yearBegin, Leaders1, log='y', las=1)
 
 Leaders1$dYrs0 <- with(Leaders1, yearEnd-yearBegin+1)
 Leaders1$dYrs1 <- c(tail(Leaders1$yearBegin, -1) - head(Leaders1$yearEnd, -1),
@@ -77,15 +82,25 @@ Leaders1600 <- MaddisonData::MaddisonLeaders(c('ARE', 'KWT', 'QAT'),
 
 table(Leaders1600$ISO)
 
-plotLeaders1600 <- MaddisonData::plotMaddison(names(table(Leaders1600$ISO)))
+Leaders1600d <- subset(MaddisonData, ISO %in% names(table(Leaders1600$ISO)))
+plotLeaders1600 <- MaddisonData::ggplotPath(y='gdppc', group='ISO', 
+                        data=Leaders1600d, scaley=1000)
+  
 plotLeaders1600 + ggplot2::xlim(1601, 2022)
-
 ```
 
+Are the three lines before 1800 `NLD`, `GBR`, and `USA`? 
 
+```{r NLD_GBR_USA}
 
+NLD_GBR_USAd <- subset(MaddisonData, ISO %in% c("NLD", 'GBR', 'USA'))
 
+NLD_GBR_USA <- ggplotPath(y='gdppc', group='ISO', 
+                        data=NLD_GBR_USAd, scaley=1000)
 
+NLD_GBR_USA + ggplot2::xlim(1301, 2022)
+NLD_GBR_USA + ggplot2::xlim(1601, 2022)
+```
 
 
 The first two observations in these data are for 1000 and 1252. The two biggest events in that period are the Norman Conquest and the Magna Carta. Dates are conveniently given in the Wikipiedia article on ["Timeline of English history"](https://en.wikipedia.org/wiki/Timeline_of_English_history). 
@@ -108,7 +123,8 @@ GBRgdppc + ggplot2::coord_cartesian(xlim=c(1250, 1350), ylim=c(0.9, 2))
 ```{r UKevents2, eval=FALSE}
 UKevents2 <- rbind(UKevents1, 
   c("1348-06", "Black Death") )
-subset(GBR, (1347<year) & (year<1451))
+
+GBR <- subset(MaddisonData, (ISO == 'GBR') & (1347<year) & (year<1451))
 (GBRpop <- plotMaddison('GBR', 'pop'))
 head(GBRpop@data)
 ```
