refine TechLeaders.Rmd

--- a/vignettes/TechLeaders.Rmd
+++ b/vignettes/TechLeaders.Rmd
@@ -34,8 +34,18 @@ MadLdrs1349 <- MaddisonLeaders(data=MadDat1349)
 (MadLdrsSum1349 <- summary(MadLdrs1349, 'yearBegin'))
 ```
 
-Singapore (`SGP`) has replaced Norway as the current leader, according to the Maddison project data. The Wikipedia article on ["List of countries by GDP (PPP) per capita"](https://en.wikipedia.org/wiki/List_of_countries_by_GDP_(PPP)_per_capita) notes that data from the US [Central Intelligence Agency](https://en.wikipedia.org/wiki/Central_Intelligence_Agency) report `gdppc` number for Monaco (`MCO`) and Liechtenstein (`LIE`) higher than Singapore and Norway. However, they are tiny countries with populations roughly 40,000 each without broad-based economies and are not included in `MaddisonData`. Luxenbourg (`LUX`) has a population under a million. Let's redo this analysis witout `LUX`.  
+Singapore (`SGP`) has replaced Norway as the current leader, according to the Maddison project data. The Wikipedia article on ["List of countries by GDP (PPP) per capita"](https://en.wikipedia.org/wiki/List_of_countries_by_GDP_(PPP)_per_capita) notes that data from the US [Central Intelligence Agency](https://en.wikipedia.org/wiki/Central_Intelligence_Agency) report `gdppc` number for Monaco (`MCO`) and Liechtenstein (`LIE`) higher than Singapore and Norway. However, they are tiny countries with populations roughly 40,000 each without broad-based economies and are not included in `MaddisonData`. Luxenbourg (`LUX`) has a population under a million. Let's redo this analysis without `LUX`.
 
+First, however, lets check on the early years for which data on Holland are available. 
+
+```{r NLD}
+NLDdat <- subset(MaddisonData, ISO=='NLD')
+head(NLDdat)
+```
+
+`MaddisonData` on Holland starts with year 1, then skips to 1000, then to 1348 before Holland becomes the leader in 1349. 
+
+Now let's refine the analysis of `GDPpc` leaders, as indicated above. 
 
 ```{r MadLdrs1349a}
 MadDat1349a <- subset(MaddisonData, (year > 1348) & 
@@ -46,10 +56,20 @@ MadLdrs1349a <- MaddisonLeaders(data=MadDat1349a)
 
 The Netherlands (`NLD`) was the leader for 97 percent of the years between 1349 and 1807, according to `MaddisonData`. Then England / Great Britain / the United Kingdom (`GBR`) led for 74 percent of the years between 1808 and 1898. Then `USA` led for 84 percent of the years between 1882 and 1990 with Australia (`AUS`), New Zealand (`NZL`) and Switzerland (`CHE`) leading for the remaining 16 percent of those years. Luxembourg (`LUX`) led between 1991 and 2008, then Switzerland (`CHE`) led for 2009, then  Singapore (`SGP`) between 2008 and 2022. 
 
-For simpicity, we focus on `NLD`, `GBR`, `USA`, and `SGP`. A few other countries (`AUS`, `NZL`, `CHE`, and `LUX`) led for so few years in this period that including them in this plot would likely add more complexity than informtion and make it harder to understand the big picture. 
+How much did `gdppc` fall for `NLD` between 1807 and 1808? 
+
+```{r Napoleon}
+(NLD1808 <- subset(NLDdat, year %in% 1807:1808))
+(dNLD1808 <- diff(log(NLD1808$gdppc)))
+expm1(dNLD1808)
+```
+
+For simplicity, we focus on `NLD`, `GBR`, `USA`, and `SGP`. A few other countries (`AUS`, `NZL`, `CHE`, and `LUX`) led for so few years in this period that including them in this plot would likely add more complexity than information and make it harder to understand the big picture. 
 
 ```{r NLD_SGP}
 NLD_SGP <- subset(MadDat1349, ISO %in% c('NLD', 'GBR', 'USA', 'SGP'))
+NLD_SGPsum <- MaddisonLeaders(data=NLD_SGP)
+summary(NLD_SGPsum)
 (NLD_SGP0 <- ggplotPath(y='gdppc', group='ISO', data=NLD_SGP, scaley=1000))
 ```
 
@@ -61,30 +81,36 @@ NLDrefs <- getMaddisonSources('NLD')
 
 The prior to 1808 these data are for [Holland](https://en.wikipedia.org/wiki/Holland) [Van Zanden and van Leeuwen (2012)]. The more recent data are for the [Netherlands](https://en.wikipedia.org/wiki/Netherlands) [Smits et al. (2000)], of which Holland is only a part. That transition was during the [Napoleonic wars](https://en.wikipedia.org/wiki/Napoleonic_Wars), and the Netherlands became part of France for part of those times. 
 
-We want to annotate this plot in multiple ways: 
-- Annotate the `NLD` line as "Holland" (at `ggppc` = roughly $5K in 1600) and "Netherlands" (at `gdppc` = roughly $4K in 1900).
+We want multiple annotationso on this plot: 
+- The `NLD` line as "Holland" (at `ggppc` = roughly $5K in 1600) and "Netherlands" (at `gdppc` = roughly $4K in 1900).
 - 'English Civil War', 1642-1652, during which [King Charles I](https://en.wikipedia.org/wiki/Charles_I_of_England) was decapitated (in 1649), after which `gdppc` for `GBR` began to increase; we could see that more clearly in a separate plot zooming in on that particular time.  
+- Queen Ann (1702-1714), who reigned over substantial turbulence in `gdppc` and was followed by slower but still impressive growth on `gdppc` relative to the economic stagnation before Charles I lost his head. 
+- War of 1812 (1812-1815).
+- American Civil War (1861-1865). 
 - `WW1` (1914-1918). 
-- The presidency of [Herbert Hoover](https://en.wikipedia.org/wiki/Herbert_Hoover) (1929-1933).
-- The presidency of [Franklin Roosevelt](https://en.wikipedia.org/wiki/Franklin_D._Roosevelt) (1933-1945). 
+- [Herbert Hoover](https://en.wikipedia.org/wiki/Herbert_Hoover) (1929-1933).
+- [Franklin Roosevelt](https://en.wikipedia.org/wiki/Franklin_D._Roosevelt) (1933-1945). 
 - `WW2` (1939-1945).
+- [Ronald Reagan](https://en.wikipedia.org/wiki/Ronald_Reagan). 
+- The first presidency of [Donald Trump](https://en.wikipedia.org/wiki/First_presidency_of_Donald_Trump). 
+- [Joe Biden](https://en.wikipedia.org/wiki/Joe_Biden). 
 
 ```{r NLD_SGP1}
-x0 <- yr(c('1642-01-04', '1812-06-18', '1861-04-12', '1914-07-28', 
-           '1929-03-04', '1933-03-04', '1939-09-01')) 
-x1 <- yr(c('1651-09-03', '1815-02-17', '1865-05-26', '1918-11-11', 
-           '1933-03-04', '1945-04-12', '1945-09-02'))
+x0 <- yr(c('1642-01-04', '1702-03-08', '1812-06-18', '1861-04-12', 
+           '1914-07-28', '1929-03-04', '1933-03-04', '1939-09-01')) 
+x1 <- yr(c('1651-09-03', '1714-08-01', '1815-02-17', '1865-05-26', 
+           '1918-11-11', '1933-03-04', '1945-04-12', '1945-09-02'))
 Vlines <- sort(unique(c(x0, x1)))
-attr(Vlines, 'color') <- c(rep('grey', 8), 'red', 'green4', 'grey', 
+attr(Vlines, 'color') <- c(rep('grey', 10), 'red', 'green4', 'grey', 
                            'green4', 'grey')
 Hlines = c(1, 3, 5, 10, 30, 50)
 Lbls <- data.frame(x=c(1500, 1600, 1740, 1870, (x0+x1)/2, 1985), 
-                   y=c(1.35,  5.7, 1.65,  3.5, 13, rep(15, 3), 36, 21, 64, 8), 
+                   y=c(1.35,  5.7, 1.65,  3.5, 13, rep(15, 4), 36, 21, 64, 8), 
     label=c('UK', 'Holland', 'US', 'Netherlands', 'English civil war', 
-            'War of 1812', 'American Civil War', 'WW1', 'Hoover', 'FDR', 
-            'WW2', 'Singapore'), 
-    srt=c(0, 0, 40, 50, rep(90, 7), 87), 
-    col=c('red', 'orange', 'blue', 'orange', 'red', rep('grey', 3), 'red',
+            'Queen Ann', 'War of 1812', 'American Civil War', 'WW1', 'Hoover',
+            'FDR', 'WW2', 'Singapore'), 
+    srt=c(0, 0, 40, 50, rep(90, 8), 87), 
+    col=c('red', 'orange', 'blue', 'orange', 'red', rep('grey', 4), 'red',
           'green4', 'grey', 'darkolivegreen4') )
 
 (NLD_SGP1 <- ggplotPath(y='gdppc', group='ISO', data=NLD_SGP, scaley=1000, 
@@ -93,6 +119,8 @@ Lbls <- data.frame(x=c(1500, 1600, 1740, 1870, (x0+x1)/2, 1985),
                         fontsize=20, 
                         color=c('red', 'orange', 'darkolivegreen4', 'blue'), 
                         linetype=c(1:2, 1, 1)))
+
+
 ```
 
 Save.
